--- a/app/src/main/res/values/strings_yasas.xml
+++ b/app/src/main/res/values/strings_yasas.xml
@@ -18,5 +18,12 @@
     <string name="repeat_pswd" >Repeat Password</string>
     <string name="phn">Phone Number</string>
     <string name="postal">Postal Address</string>
+    <string name="greeting_1">We’ll deliver your package to wherever you want ; whenever you want!</string>
+    <string name="forgot_password">FORGOT PASSWORD ?</string>
+    <string name="email_hint">Enter your Email</string>
+    <string name="snd_pkg">Send Package</string>
+    <string name="untrk">Untracked</string>
+    <string name="desc_trkd">Starting from 400LKR Islandwide</string>
+    <string name="sgnup">Sign Up</string>
 
 </resources>
