--- a/app/src/main/res/layout/activity_search_user.xml
+++ b/app/src/main/res/layout/activity_search_user.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.12"
-        tools:text="Search User" />
+        tools:text="@string/search" />
 
     <TextView
         android:id="@+id/textView25"
@@ -31,7 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.23"
-        tools:text="User ID : " />
+        tools:text="@string/id" />
 
     <TextView
         android:id="@+id/textView26"
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.282"
-        tools:text="User Name :" />
+        tools:text="@string/user_name" />
 
     <Button
         android:id="@+id/button5"
