--- a/app/src/main/res/layout/activity_select_packages.xml
+++ b/app/src/main/res/layout/activity_select_packages.xml
@@ -23,7 +23,9 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/btn_color"
         android:text="@string/trked"
+        android:textColor="@color/cardview_light_background"
         app:layout_constraintBaseline_toBaselineOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -47,7 +49,9 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
+        android:backgroundTint="@color/btn_color"
         android:text="@string/untrk"
+        android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintHorizontal_bias="0.5"
